# yoctolib_cpp

./: .gitignore  FILES.txt  README.md  README.txt  RELEASE.txt  build.bat
Examples/Doc-GettingStarted-Yocto-0-10V-Rx/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-0-10V-Rx/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-GettingStarted-Yocto-0-10V-Rx/VisualStudio/: demo.vcxproj
Examples/Doc-GettingStarted-Yocto-0-10V-Tx/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-0-10V-Tx/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-GettingStarted-Yocto-0-10V-Tx/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-3D/: CMakeLists.txt  GNUmakefile  README.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-3D/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-GettingStarted-Yocto-3D/VisualStudio/: VisualStudio.vcxproj  demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-4-20mA-Rx/: CMakeLists.txt  main.cpp
Examples/Doc-GettingStarted-Yocto-4-20mA-Rx/CodeBlocks/: CodeBlocks_linux.cbp
Examples/Doc-GettingStarted-Yocto-4-20mA-Rx/VisualStudio/: VisualStudio.vcxproj  demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-Altimeter/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-Altimeter/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-GettingStarted-Yocto-Altimeter/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-Display/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-Display/CodeBlocks/: CodeBlocks_linux.cbp
Examples/Doc-GettingStarted-Yocto-Display/VisualStudio/: VisualStudio.vcxproj  demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-I2C/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-I2C/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-GettingStarted-Yocto-I2C/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-MaxiBuzzer/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-MaxiBuzzer/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-GettingStarted-Yocto-MaxiBuzzer/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-Motor-DC/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-Motor-DC/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-GettingStarted-Yocto-Motor-DC/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-Temperature-IR/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-Temperature-IR/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-GettingStarted-Yocto-Temperature-IR/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-Thermistor-C/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-GettingStarted-Yocto-Thermistor-C/CodeBlocks/: CodeBlocks_linux.cbp
Examples/Doc-GettingStarted-Yocto-Thermistor-C/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Doc-GettingStarted-Yocto-WatchdogDC/: CMakeLists.txt  files.json  main.cpp  makefile
Examples/Doc-GettingStarted-Yocto-WatchdogDC/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-GettingStarted-Yocto-WatchdogDC/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Doc-Inventory/: CMakeLists.txt  GNUmakefile  files.json  main.cpp
Examples/Doc-Inventory/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp  CodeBlocks_win.depend  CodeBlocks_win.layout
Examples/Doc-Inventory/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Doc-ModuleControl/: CMakeLists.txt  files.json  main.cpp
Examples/Doc-ModuleControl/CodeBlocks/: CodeBlocks_linux.cbp  CodeBlocks_win.cbp
Examples/Doc-ModuleControl/VisualStudio/: VisualStudio.vcxproj  demo.vcxproj  demo.vcxproj.filters
Examples/Prog-Display-DrawBitmap/: CMakeLists.txt  main.cpp
Examples/Prog-Display-DrawBitmap/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Prog-ExportCSV/: CMakeLists.txt  main.cpp
Examples/Prog-ExportCSV/CodeBlocks/: CodeBlocks_win.cbp
Examples/Prog-ExportCSV/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Prog-HubDiscovery-method1/: CMakeLists.txt  main.cpp
Examples/Prog-HubDiscovery-method1/CodeBlocks/: CodeBlocks_linux.cbp
Examples/Prog-HubDiscovery-method1/VisualStudio/: demo.vcxproj
Examples/Prog-HubDiscovery-method2/: CMakeLists.txt  main.cpp
Examples/Prog-HubDiscovery-method2/VisualStudio/: demo.vcxproj  demo.vcxproj.filters
Examples/Prog-SMS-Example/: CMakeLists.txt  files.json  main.cpp
Sources/: CMakeLists.txt  winresource.rc  winresource64.rc  yocto_accelerometer.cpp  yocto_accelerometer.h  yocto_airquality.cpp  yocto_airquality.h  yocto_altitude.cpp  yocto_altitude.h  yocto_anbutton.cpp  yocto_anbutton.h  yocto_angularspeed.cpp  yocto_angularspeed.h  yocto_api.cpp  yocto_api.h  yocto_arithmeticsensor.cpp  yocto_arithmeticsensor.h  yocto_audioin.cpp  yocto_audioin.h  yocto_audioout.cpp  yocto_audioout.h  yocto_bluetoothlink.cpp  yocto_bluetoothlink.h  yocto_bridgecontrol.cpp  yocto_bridgecontrol.h  yocto_buzzer.cpp  yocto_buzzer.h  yocto_carbondioxide.cpp  yocto_carbondioxide.h  yocto_cellular.cpp  yocto_cellular.h  yocto_colorled.cpp  yocto_colorled.h  yocto_colorledcluster.cpp  yocto_colorledcluster.h  yocto_colorsensor.cpp  yocto_colorsensor.h  yocto_compass.cpp  yocto_compass.h  yocto_counter.cpp  (+139 more)
Sources/cmake/: yoctolib-config.cmake.in
Sources/yapi/: CMakeLists.txt  winresource.rc  yapi.c  yapi.def  yapi.h  yapiresource.res  yapiresource64.rc  yapiresource64.res  ydef.h  ydef_private.h  yfifo.c  yfifo.h  yhash.c  yhash.h  yjni.c  yjni.h  yjson.c  yjson.h  ykey.c  ykey.h  ymemory.c  ymemory.h  ypkt_lin.c  ypkt_osx.c  ypkt_win.c  yprog.c  yprog.h  yproto.h  yssl.c  yssl.h  ystream.c  ytcp.c  ytcp.h  ythread.c  ythread.h  yversion.h
(+726 files in other folders)
